# codeprep

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  MANIFEST.ini  README.md  logging.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.reuse/: dep5  dep5~
codeprep/: __init__.py  __main__.py  config.py  dirutils.py  fileutils.py  logging.yaml  noneng.py  prepconfig.py  stemming.py  subtokens.py  tokens.py  util.py
codeprep/api/: common.py  corpus.py  text.py
codeprep/bpepkg/: bpe_config.py  bpe_encode.py  bpe_learn.py  cache.py  merge.py  wild_bpe.py
codeprep/cli/: impl.py  spec.py  vocab.py
codeprep/parse/: core.py  matchers.py  subtokens.py
codeprep/pipeline/: bpelearner.py  bperegistry.py  dataset.py  parse_projects.py  stages.py  to_repr.py  vocab.py  vocabloader.py
codeprep/preprocess/: codestructure.py  core.py  metadata.py  placeholders.py  reprconfig.py  result.py  tokens.py
codeprep/tokens/: containers.py  noneng.py  numeric.py  rootclasses.py  whitespace.py  word.py
codeprep/tokentypes/: __init__.py  containers.py  noneng.py  numeric.py  rootclasses.py  whitespace.py  (+1 more)
dataprep/: VERSION  __init__.py  __main__.py  api.py  bperegistry.py  cli.py  config.py  dataset.py  dirutils.py  fileutils.py  fs.py  logging.yaml  noneng.py  parse_projects.py  prepconfig.py  stages.py  stemming.py  subtokens.py  to_repr.py  util.py  vocab.py  vocabloader.py
tests/: __init__.py  api.py  api_b2b.py  bperegistry.py  cli.py  dataset.py  subword_separation.py  test_api_b2b.py  test_corpus_b2b.py  test_noneng.py  test_subword_separation.py  test_to_repr.py  to_repr.py  util.py
(+168 files in other folders)
