[tool.poetry]
name = "codeprep"
version = "2.0.0-alpha.0"
description = "'A toolkit for pre-processing large source code corpora to feed them to deep learning models'"
authors = ["hlib <hlibbabii@gmail.com>"]
license = "Apache-2.0"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Software Development :: Pre-processors'
]
readme = "README.md"
keywords = ['source code', 'pre-processing', 'deep learning']
homepage='http://github.com/giganticode/codeprep'
repository='http://github.com/giganticode/codeprep'

[tool.poetry.dependencies]
python = ">=3.7, <4"
dill = "^0.3.4"
docopt = "^0.6.2"
docopt-subcommands = "^3.0.0"
jsons = "^1.5.0"
nltk = "^3.6.2"
Pygments = "2.6.1"
PyYAML = "^5.4.1"
regex = "^2021.8.3"
tqdm = "^4.62.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
coverage = "^5.5"
reuse = "^0.13.0"
tox = "^3.24.1"

[tool.poetry.scripts]
codeprep = "codeprep.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
